[package]
name = "black_pill_hw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
panic-halt = "1.0.0"
ssd1306 = "0.9.0"
stm32f4 = { version = "0.15.1", features = ["stm32f411", "rt"] }
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f411"] }

[profile.release]
debug = true
